k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo
  labels:
    app: devops-demo
spec:
  type: LoadBalancer
  selector:
    app: devops-demo
  ports:
    - name: http
      port: 3000
      targetPort: http
